src/Parser/Logic/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Logic/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pSequent -> Sequent                         (0)
	%start_pTermType -> TermType                       (1)
	%start_pStep -> Step                               (2)
	%start_pListStep -> ListStep                       (3)
	%start_pArg -> Arg                                 (4)
	%start_pListArg -> ListArg                         (5)
	%start_pForm4 -> Form4                             (6)
	%start_pForm3 -> Form3                             (7)
	%start_pForm2 -> Form2                             (8)
	%start_pForm1 -> Form1                             (9)
	%start_pForm -> Form                               (10)
	%start_pListForm -> ListForm                       (11)
	%start_pPred -> Pred                               (12)
	%start_pTerm -> Term                               (13)
	%start_pListTerm -> ListTerm                       (14)
	Integer -> L_integ                                 (15)
	PredId -> L_PredId                                 (16)
	TermId -> L_TermId                                 (17)
	RuleId -> L_RuleId                                 (18)
	Sequent -> 'if' ListForm '|-' Form '{' ListStep '}'   (19)
	TermType -> 'var'                                  (20)
	TermType -> 'const'                                (21)
	Step -> 'prem' Form ';'                            (22)
	Step -> TermType TermId ';'                        (23)
	Step -> 'assume' Form ';'                          (24)
	Step -> '{' ListStep '}'                           (25)
	Step -> RuleId '[' ListArg ']' Form ';'            (26)
	ListStep ->                                        (27)
	ListStep -> Step ListStep                          (28)
	Arg -> Step                                        (29)
	Arg -> Integer                                     (30)
	ListArg ->                                         (31)
	ListArg -> Arg                                     (32)
	ListArg -> Arg ',' ListArg                         (33)
	Form4 -> 'bot'                                     (34)
	Form4 -> Term '=' Term                             (35)
	Form4 -> Pred                                      (36)
	Form4 -> '(' Form ')'                              (37)
	Form3 -> 'all' TermId Form3                        (38)
	Form3 -> 'some' TermId Form3                       (39)
	Form3 -> '!' Form4                                 (40)
	Form3 -> Form4                                     (41)
	Form2 -> Form2 '&' Form3                           (42)
	Form2 -> Form2 '|' Form3                           (43)
	Form2 -> Form3                                     (44)
	Form1 -> Form1 '->' Form2                          (45)
	Form1 -> Form2                                     (46)
	Form -> Form1                                      (47)
	ListForm ->                                        (48)
	ListForm -> Form                                   (49)
	ListForm -> Form ',' ListForm                      (50)
	Pred -> PredId                                     (51)
	Pred -> PredId '(' ListTerm ')'                    (52)
	Term -> TermId                                     (53)
	Term -> TermId '(' ListTerm ')'                    (54)
	ListTerm -> Term                                   (55)
	ListTerm -> Term ',' ListTerm                      (56)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'&'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	','            { PT _ (TS _ 5) }
	'->'           { PT _ (TS _ 6) }
	';'            { PT _ (TS _ 7) }
	'='            { PT _ (TS _ 8) }
	'['            { PT _ (TS _ 9) }
	']'            { PT _ (TS _ 10) }
	'all'          { PT _ (TS _ 11) }
	'assume'       { PT _ (TS _ 12) }
	'bot'          { PT _ (TS _ 13) }
	'const'        { PT _ (TS _ 14) }
	'if'           { PT _ (TS _ 15) }
	'prem'         { PT _ (TS _ 16) }
	'some'         { PT _ (TS _ 17) }
	'var'          { PT _ (TS _ 18) }
	'{'            { PT _ (TS _ 19) }
	'|'            { PT _ (TS _ 20) }
	'|-'           { PT _ (TS _ 21) }
	'}'            { PT _ (TS _ 22) }
	L_integ        { PT _ (TI $$) }
	L_PredId       { PT _ (T_PredId $$) }
	L_TermId       { PT _ (T_TermId $$) }
	L_RuleId       { PT _ (T_RuleId $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pSequent rule  0
	%start_pTermType rule  1
	%start_pStep    rule  2
	%start_pListStep rule  3
	%start_pArg     rule  4
	%start_pListArg rule  5
	%start_pForm4   rule  6
	%start_pForm3   rule  7
	%start_pForm2   rule  8
	%start_pForm1   rule  9
	%start_pForm    rule  10
	%start_pListForm rule  11
	%start_pPred    rule  12
	%start_pTerm    rule  13
	%start_pListTerm rule  14
	Integer         rule  15
	PredId          rule  16
	TermId          rule  17
	RuleId          rule  18
	Sequent         rule  19
	TermType        rules 20, 21
	Step            rules 22, 23, 24, 25, 26
	ListStep        rules 27, 28
	Arg             rules 29, 30
	ListArg         rules 31, 32, 33
	Form4           rules 34, 35, 36, 37
	Form3           rules 38, 39, 40, 41
	Form2           rules 42, 43, 44
	Form1           rules 45, 46
	Form            rule  47
	ListForm        rules 48, 49, 50
	Pred            rules 51, 52
	Term            rules 53, 54
	ListTerm        rules 55, 56

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pSequent -> . Sequent                        (rule 0)

	'if'           shift, and enter state 61

	Sequent        goto state 60

State 1

	%start_pTermType -> . TermType                      (rule 1)

	'const'        shift, and enter state 50
	'var'          shift, and enter state 52

	TermType       goto state 59

State 2

	%start_pStep -> . Step                              (rule 2)

	'assume'       shift, and enter state 49
	'const'        shift, and enter state 50
	'prem'         shift, and enter state 51
	'var'          shift, and enter state 52
	'{'            shift, and enter state 53
	L_RuleId       shift, and enter state 54

	RuleId         goto state 44
	TermType       goto state 45
	Step           goto state 58

State 3

	%start_pListStep -> . ListStep                      (rule 3)

	'assume'       shift, and enter state 49
	'const'        shift, and enter state 50
	'prem'         shift, and enter state 51
	'var'          shift, and enter state 52
	'{'            shift, and enter state 53
	L_RuleId       shift, and enter state 54
	%eof           reduce using rule 27

	RuleId         goto state 44
	TermType       goto state 45
	Step           goto state 56
	ListStep       goto state 57

State 4

	%start_pArg -> . Arg                                (rule 4)

	'assume'       shift, and enter state 49
	'const'        shift, and enter state 50
	'prem'         shift, and enter state 51
	'var'          shift, and enter state 52
	'{'            shift, and enter state 53
	L_integ        shift, and enter state 16
	L_RuleId       shift, and enter state 54

	Integer        goto state 43
	RuleId         goto state 44
	TermType       goto state 45
	Step           goto state 46
	Arg            goto state 55

State 5

	%start_pListArg -> . ListArg                        (rule 5)

	'assume'       shift, and enter state 49
	'const'        shift, and enter state 50
	'prem'         shift, and enter state 51
	'var'          shift, and enter state 52
	'{'            shift, and enter state 53
	L_integ        shift, and enter state 16
	L_RuleId       shift, and enter state 54
	%eof           reduce using rule 31

	Integer        goto state 43
	RuleId         goto state 44
	TermType       goto state 45
	Step           goto state 46
	Arg            goto state 47
	ListArg        goto state 48

State 6

	%start_pForm4 -> . Form4                            (rule 6)

	'('            shift, and enter state 34
	'bot'          shift, and enter state 36
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 42
	Pred           goto state 31
	Term           goto state 32

State 7

	%start_pForm3 -> . Form3                            (rule 7)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 41
	Pred           goto state 31
	Term           goto state 32

State 8

	%start_pForm2 -> . Form2                            (rule 8)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 26
	Form2          goto state 40
	Pred           goto state 31
	Term           goto state 32

State 9

	%start_pForm1 -> . Form1                            (rule 9)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 26
	Form2          goto state 27
	Form1          goto state 39
	Pred           goto state 31
	Term           goto state 32

State 10

	%start_pForm -> . Form                              (rule 10)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 26
	Form2          goto state 27
	Form1          goto state 28
	Form           goto state 38
	Pred           goto state 31
	Term           goto state 32

State 11

	%start_pListForm -> . ListForm                      (rule 11)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20
	%eof           reduce using rule 48

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 26
	Form2          goto state 27
	Form1          goto state 28
	Form           goto state 29
	ListForm       goto state 30
	Pred           goto state 31
	Term           goto state 32

State 12

	%start_pPred -> . Pred                              (rule 12)

	L_PredId       shift, and enter state 24

	PredId         goto state 22
	Pred           goto state 23

State 13

	%start_pTerm -> . Term                              (rule 13)

	L_TermId       shift, and enter state 20

	TermId         goto state 17
	Term           goto state 21

State 14

	%start_pListTerm -> . ListTerm                      (rule 14)

	L_TermId       shift, and enter state 20

	TermId         goto state 17
	Term           goto state 18
	ListTerm       goto state 19

State 15

	Integer -> . L_integ                                (rule 15)

	L_integ        shift, and enter state 16


State 16

	Integer -> L_integ .                                (rule 15)

	','            reduce using rule 15
	']'            reduce using rule 15
	%eof           reduce using rule 15


State 17

	Term -> TermId .                                    (rule 53)
	Term -> TermId . '(' ListTerm ')'                   (rule 54)

	'&'            reduce using rule 53
	'('            shift, and enter state 81
	')'            reduce using rule 53
	','            reduce using rule 53
	'->'           reduce using rule 53
	';'            reduce using rule 53
	'='            reduce using rule 53
	'{'            reduce using rule 53
	'|'            reduce using rule 53
	'|-'           reduce using rule 53
	%eof           reduce using rule 53


State 18

	ListTerm -> Term .                                  (rule 55)
	ListTerm -> Term . ',' ListTerm                     (rule 56)

	')'            reduce using rule 55
	','            shift, and enter state 80
	%eof           reduce using rule 55


State 19

	%start_pListTerm -> ListTerm .                      (rule 14)

	%eof           accept


State 20

	TermId -> L_TermId .                                (rule 17)

	'!'            reduce using rule 17
	'&'            reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	','            reduce using rule 17
	'->'           reduce using rule 17
	';'            reduce using rule 17
	'='            reduce using rule 17
	'all'          reduce using rule 17
	'bot'          reduce using rule 17
	'some'         reduce using rule 17
	'{'            reduce using rule 17
	'|'            reduce using rule 17
	'|-'           reduce using rule 17
	L_PredId       reduce using rule 17
	L_TermId       reduce using rule 17
	%eof           reduce using rule 17


State 21

	%start_pTerm -> Term .                              (rule 13)

	%eof           accept


State 22

	Pred -> PredId .                                    (rule 51)
	Pred -> PredId . '(' ListTerm ')'                   (rule 52)

	'&'            reduce using rule 51
	'('            shift, and enter state 79
	')'            reduce using rule 51
	','            reduce using rule 51
	'->'           reduce using rule 51
	';'            reduce using rule 51
	'{'            reduce using rule 51
	'|'            reduce using rule 51
	'|-'           reduce using rule 51
	%eof           reduce using rule 51


State 23

	%start_pPred -> Pred .                              (rule 12)

	%eof           accept


State 24

	PredId -> L_PredId .                                (rule 16)

	'&'            reduce using rule 16
	'('            reduce using rule 16
	')'            reduce using rule 16
	','            reduce using rule 16
	'->'           reduce using rule 16
	';'            reduce using rule 16
	'{'            reduce using rule 16
	'|'            reduce using rule 16
	'|-'           reduce using rule 16
	%eof           reduce using rule 16


State 25

	Form3 -> Form4 .                                    (rule 41)

	'&'            reduce using rule 41
	')'            reduce using rule 41
	','            reduce using rule 41
	'->'           reduce using rule 41
	';'            reduce using rule 41
	'{'            reduce using rule 41
	'|'            reduce using rule 41
	'|-'           reduce using rule 41
	%eof           reduce using rule 41


State 26

	Form2 -> Form3 .                                    (rule 44)

	'&'            reduce using rule 44
	')'            reduce using rule 44
	','            reduce using rule 44
	'->'           reduce using rule 44
	';'            reduce using rule 44
	'{'            reduce using rule 44
	'|'            reduce using rule 44
	'|-'           reduce using rule 44
	%eof           reduce using rule 44


State 27

	Form2 -> Form2 . '&' Form3                          (rule 42)
	Form2 -> Form2 . '|' Form3                          (rule 43)
	Form1 -> Form2 .                                    (rule 46)

	'&'            shift, and enter state 70
	')'            reduce using rule 46
	','            reduce using rule 46
	'->'           reduce using rule 46
	';'            reduce using rule 46
	'{'            reduce using rule 46
	'|'            shift, and enter state 71
	'|-'           reduce using rule 46
	%eof           reduce using rule 46


State 28

	Form1 -> Form1 . '->' Form2                         (rule 45)
	Form -> Form1 .                                     (rule 47)

	')'            reduce using rule 47
	','            reduce using rule 47
	'->'           shift, and enter state 72
	';'            reduce using rule 47
	'{'            reduce using rule 47
	'|-'           reduce using rule 47
	%eof           reduce using rule 47


State 29

	ListForm -> Form .                                  (rule 49)
	ListForm -> Form . ',' ListForm                     (rule 50)

	','            shift, and enter state 78
	'|-'           reduce using rule 49
	%eof           reduce using rule 49


State 30

	%start_pListForm -> ListForm .                      (rule 11)

	%eof           accept


State 31

	Form4 -> Pred .                                     (rule 36)

	'&'            reduce using rule 36
	')'            reduce using rule 36
	','            reduce using rule 36
	'->'           reduce using rule 36
	';'            reduce using rule 36
	'{'            reduce using rule 36
	'|'            reduce using rule 36
	'|-'           reduce using rule 36
	%eof           reduce using rule 36


State 32

	Form4 -> Term . '=' Term                            (rule 35)

	'='            shift, and enter state 77


State 33

	Form3 -> '!' . Form4                                (rule 40)

	'('            shift, and enter state 34
	'bot'          shift, and enter state 36
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 76
	Pred           goto state 31
	Term           goto state 32

State 34

	Form4 -> '(' . Form ')'                             (rule 37)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 26
	Form2          goto state 27
	Form1          goto state 28
	Form           goto state 75
	Pred           goto state 31
	Term           goto state 32

State 35

	Form3 -> 'all' . TermId Form3                       (rule 38)

	L_TermId       shift, and enter state 20

	TermId         goto state 74

State 36

	Form4 -> 'bot' .                                    (rule 34)

	'&'            reduce using rule 34
	')'            reduce using rule 34
	','            reduce using rule 34
	'->'           reduce using rule 34
	';'            reduce using rule 34
	'{'            reduce using rule 34
	'|'            reduce using rule 34
	'|-'           reduce using rule 34
	%eof           reduce using rule 34


State 37

	Form3 -> 'some' . TermId Form3                      (rule 39)

	L_TermId       shift, and enter state 20

	TermId         goto state 73

State 38

	%start_pForm -> Form .                              (rule 10)

	%eof           accept


State 39

	%start_pForm1 -> Form1 .                            (rule 9)
	Form1 -> Form1 . '->' Form2                         (rule 45)

	'->'           shift, and enter state 72
	%eof           accept


State 40

	%start_pForm2 -> Form2 .                            (rule 8)
	Form2 -> Form2 . '&' Form3                          (rule 42)
	Form2 -> Form2 . '|' Form3                          (rule 43)

	'&'            shift, and enter state 70
	'|'            shift, and enter state 71
	%eof           accept


State 41

	%start_pForm3 -> Form3 .                            (rule 7)

	%eof           accept


State 42

	%start_pForm4 -> Form4 .                            (rule 6)

	%eof           accept


State 43

	Arg -> Integer .                                    (rule 30)

	','            reduce using rule 30
	']'            reduce using rule 30
	%eof           reduce using rule 30


State 44

	Step -> RuleId . '[' ListArg ']' Form ';'           (rule 26)

	'['            shift, and enter state 69


State 45

	Step -> TermType . TermId ';'                       (rule 23)

	L_TermId       shift, and enter state 20

	TermId         goto state 68

State 46

	Arg -> Step .                                       (rule 29)

	','            reduce using rule 29
	']'            reduce using rule 29
	%eof           reduce using rule 29


State 47

	ListArg -> Arg .                                    (rule 32)
	ListArg -> Arg . ',' ListArg                        (rule 33)

	','            shift, and enter state 67
	']'            reduce using rule 32
	%eof           reduce using rule 32


State 48

	%start_pListArg -> ListArg .                        (rule 5)

	%eof           accept


State 49

	Step -> 'assume' . Form ';'                         (rule 24)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 26
	Form2          goto state 27
	Form1          goto state 28
	Form           goto state 66
	Pred           goto state 31
	Term           goto state 32

State 50

	TermType -> 'const' .                               (rule 21)

	L_TermId       reduce using rule 21
	%eof           reduce using rule 21


State 51

	Step -> 'prem' . Form ';'                           (rule 22)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 26
	Form2          goto state 27
	Form1          goto state 28
	Form           goto state 65
	Pred           goto state 31
	Term           goto state 32

State 52

	TermType -> 'var' .                                 (rule 20)

	L_TermId       reduce using rule 20
	%eof           reduce using rule 20


State 53

	Step -> '{' . ListStep '}'                          (rule 25)

	'assume'       shift, and enter state 49
	'const'        shift, and enter state 50
	'prem'         shift, and enter state 51
	'var'          shift, and enter state 52
	'{'            shift, and enter state 53
	'}'            reduce using rule 27
	L_RuleId       shift, and enter state 54

	RuleId         goto state 44
	TermType       goto state 45
	Step           goto state 56
	ListStep       goto state 64

State 54

	RuleId -> L_RuleId .                                (rule 18)

	'['            reduce using rule 18


State 55

	%start_pArg -> Arg .                                (rule 4)

	%eof           accept


State 56

	ListStep -> Step . ListStep                         (rule 28)

	'assume'       shift, and enter state 49
	'const'        shift, and enter state 50
	'prem'         shift, and enter state 51
	'var'          shift, and enter state 52
	'{'            shift, and enter state 53
	'}'            reduce using rule 27
	L_RuleId       shift, and enter state 54
	%eof           reduce using rule 27

	RuleId         goto state 44
	TermType       goto state 45
	Step           goto state 56
	ListStep       goto state 63

State 57

	%start_pListStep -> ListStep .                      (rule 3)

	%eof           accept


State 58

	%start_pStep -> Step .                              (rule 2)

	%eof           accept


State 59

	%start_pTermType -> TermType .                      (rule 1)

	%eof           accept


State 60

	%start_pSequent -> Sequent .                        (rule 0)

	%eof           accept


State 61

	Sequent -> 'if' . ListForm '|-' Form '{' ListStep '}'    (rule 19)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	'|-'           reduce using rule 48
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 26
	Form2          goto state 27
	Form1          goto state 28
	Form           goto state 29
	ListForm       goto state 62
	Pred           goto state 31
	Term           goto state 32

State 62

	Sequent -> 'if' ListForm . '|-' Form '{' ListStep '}'    (rule 19)

	'|-'           shift, and enter state 99


State 63

	ListStep -> Step ListStep .                         (rule 28)

	'}'            reduce using rule 28
	%eof           reduce using rule 28


State 64

	Step -> '{' ListStep . '}'                          (rule 25)

	'}'            shift, and enter state 98


State 65

	Step -> 'prem' Form . ';'                           (rule 22)

	';'            shift, and enter state 97


State 66

	Step -> 'assume' Form . ';'                         (rule 24)

	';'            shift, and enter state 96


State 67

	ListArg -> Arg ',' . ListArg                        (rule 33)

	']'            reduce using rule 31
	'assume'       shift, and enter state 49
	'const'        shift, and enter state 50
	'prem'         shift, and enter state 51
	'var'          shift, and enter state 52
	'{'            shift, and enter state 53
	L_integ        shift, and enter state 16
	L_RuleId       shift, and enter state 54
	%eof           reduce using rule 31

	Integer        goto state 43
	RuleId         goto state 44
	TermType       goto state 45
	Step           goto state 46
	Arg            goto state 47
	ListArg        goto state 95

State 68

	Step -> TermType TermId . ';'                       (rule 23)

	';'            shift, and enter state 94


State 69

	Step -> RuleId '[' . ListArg ']' Form ';'           (rule 26)

	']'            reduce using rule 31
	'assume'       shift, and enter state 49
	'const'        shift, and enter state 50
	'prem'         shift, and enter state 51
	'var'          shift, and enter state 52
	'{'            shift, and enter state 53
	L_integ        shift, and enter state 16
	L_RuleId       shift, and enter state 54

	Integer        goto state 43
	RuleId         goto state 44
	TermType       goto state 45
	Step           goto state 46
	Arg            goto state 47
	ListArg        goto state 93

State 70

	Form2 -> Form2 '&' . Form3                          (rule 42)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 92
	Pred           goto state 31
	Term           goto state 32

State 71

	Form2 -> Form2 '|' . Form3                          (rule 43)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 91
	Pred           goto state 31
	Term           goto state 32

State 72

	Form1 -> Form1 '->' . Form2                         (rule 45)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 26
	Form2          goto state 90
	Pred           goto state 31
	Term           goto state 32

State 73

	Form3 -> 'some' TermId . Form3                      (rule 39)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 89
	Pred           goto state 31
	Term           goto state 32

State 74

	Form3 -> 'all' TermId . Form3                       (rule 38)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 88
	Pred           goto state 31
	Term           goto state 32

State 75

	Form4 -> '(' Form . ')'                             (rule 37)

	')'            shift, and enter state 87


State 76

	Form3 -> '!' Form4 .                                (rule 40)

	'&'            reduce using rule 40
	')'            reduce using rule 40
	','            reduce using rule 40
	'->'           reduce using rule 40
	';'            reduce using rule 40
	'{'            reduce using rule 40
	'|'            reduce using rule 40
	'|-'           reduce using rule 40
	%eof           reduce using rule 40


State 77

	Form4 -> Term '=' . Term                            (rule 35)

	L_TermId       shift, and enter state 20

	TermId         goto state 17
	Term           goto state 86

State 78

	ListForm -> Form ',' . ListForm                     (rule 50)

	'!'            shift, and enter state 33
	'('            shift, and enter state 34
	'all'          shift, and enter state 35
	'bot'          shift, and enter state 36
	'some'         shift, and enter state 37
	'|-'           reduce using rule 48
	L_PredId       shift, and enter state 24
	L_TermId       shift, and enter state 20
	%eof           reduce using rule 48

	PredId         goto state 22
	TermId         goto state 17
	Form4          goto state 25
	Form3          goto state 26
	Form2          goto state 27
	Form1          goto state 28
	Form           goto state 29
	ListForm       goto state 85
	Pred           goto state 31
	Term           goto state 32

State 79

	Pred -> PredId '(' . ListTerm ')'                   (rule 52)

	L_TermId       shift, and enter state 20

	TermId         goto state 17
	Term           goto state 18
	ListTerm       goto state 84

State 80

	ListTerm -> Term ',' . ListTerm                     (rule 56)

	L_TermId       shift, and enter state 20

	TermId         goto state 17
	Term           goto state 18
	ListTerm       goto state 83

State 81
